# fetch-by-similarity

./: .gitignore  README.md  pyproject.toml  requirements.txt  run  run-venv  run_pip  run_uv
harness/: cleartext_impl.py  generate_dataset.py  generate_query.py  params.py  run_submission.py  utils.py  verify_result.py
measurements/: README.md
measurements/count_medium/: results-1.json  results-2.json  results-3.json
measurements/count_small/: results-1.json  results-2.json  results-3.json
measurements/medium/: results-1.json  results-2.json  results-3.json
measurements/small/: results-1.json  results-2.json  results-3.json
scripts/: build_task.sh
submission/: CMakeLists.txt  README.md
submission/docs/: README.md
submission/include/: params.h  utils.h
submission/lib/: server_timer.py
submission/src/: 02_client_preprocess_dataset.py  03_client_key_generation.py  04_client_encode_encrypt_db.py  05_server_preprocess_dataset.py  07_client_preprocess_query.py  08_client_encode_encrypt_query.py  09_server_encrypted_compute.py  10a_client_decrypt_decode.py  10b_client_postprocess.py  client_decrypt_decode.cpp  client_encode_encrypt_db.cpp  client_encode_encrypt_query.cpp  client_postprocess.py  client_preprocess_query.cpp  server_encrypted_compute.cpp
submission_remote/docs/: README.md  README_Lattica_submission.md
submission_remote/src/: client_decrypt_decode.py  client_encode_encrypt_db.py  client_encode_encrypt_query.py  client_key_generation.py  client_postprocess.py  client_preprocess_dataset.py  server_encrypted_compute.py  server_get_params.py  (+3 more)
(+6 files in other folders)
